fix: make rsvp input have sufficient contrast

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -68,13 +68,11 @@ input {
     svg {
       width: 2rem;
       fill: var(--color-red-400);
-      opacity: 75%;
       padding: 4px;
     }
 
     input {
       flex: 1;
-      opacity: 75%;
 
       &:hover,
       &:focus {
@@ -83,8 +81,7 @@ input {
       }
 
       &::placeholder {
-        color: var(--color-red-500);
-        opacity: 75%;
+        color: var(--color-red-400);
       }
     }
   }
